--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "utf8": "^3.0.0"
   }
 }
