--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@
 #PGPASSWORD='X.P*uB3EAD2yWteWA3c2VY!!xqQx'
 #PGPORT=5432
 #PORT=8083
+#TOKEN_KEY='ABCGAGF151'
+#COOKIE_KEY='TEST123'
+#NODE_ENV='development'
 
 # deployed DB config
 PGUSER='mccqimzzpmncnt'
@@ -15,4 +18,7 @@ PGPORT=5432
 PORT=8083
 TOKEN_KEY='ABCGAGF151'
 COOKIE_KEY='TEST123'
+AWS_S3_BUCKET_URL='https://s3.us-east-2.amazonaws.com/hoorah'
+AWS_ACCESS_KEY='AKIAZTKMYTMECYQ2BWWX'
+AWS_PRIVATE_ACCESS_KEY='YEF3iL5CEiEwI3JDDEWt/goRRrpSLg7f6uK5GP6g
 NODE_ENV='development'
