--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws4-axios": "^3.2.1",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
-    "express-session": "^1.17.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
