--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-amplify/core": "^5.3.0",
     "aws4-axios": "^3.2.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
     "sqlite3": "^5.1.6",
