removing AWS KEY values from env file

--- a/.env
+++ b/.env
@@ -19,6 +19,6 @@ PORT=8083
 TOKEN_KEY='ABCGAGF151'
 COOKIE_KEY='TEST123'
 AWS_S3_BUCKET_URL='https://s3.us-east-2.amazonaws.com/hoorah'
-AWS_ACCESS_KEY='AKIAZTKMYTMECYQ2BWWX'
-AWS_PRIVATE_ACCESS_KEY='YEF3iL5CEiEwI3JDDEWt/goRRrpSLg7f6uK5GP6g
+AWS_ACCESS_KEY=''
+AWS_PRIVATE_ACCESS_KEY=''
 NODE_ENV='development'
