--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-amplify/core": "^5.3.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "aws4-axios": "^3.2.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
@@ -22,6 +23,9 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
